@@ -1,5 +1,5 @@
 # Beats dockerfile used for testing
-FROM golang:1.8.1
+FROM golang:1.8.3
 MAINTAINER Nicolas Ruflin <ruflin@elastic.co>
 
 RUN set -x && \
