@@ -1,6 +1,6 @@
 :stack-version: 6.0.0-alpha1
 :doc-branch: master
-:go-version: 1.8.1
+:go-version: 1.8.3
 :release-state: prerelease
 :python: 2.7.9
 :docker: 1.12
