@@ -1,4 +1,4 @@
-FROM golang:1.8.1
+FROM golang:1.8.3
 MAINTAINER Nicolas Ruflin <ruflin@elastic.co>
 
 RUN set -x && \
